<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright © 2018 The Superior OS Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="heavens_settings_title">Heavens Settings</string>
    <string name="heavens_dashboard_summary">Go to Heavens now!</string>

    <!-- Advanced restart options -->
    <string name="advanced_reboot_title">Advanced restart</string>
    <string name="advanced_reboot_summary">When unlocked, include options in the power menu for restarting into recovery or bootloader</string>

    <!-- Categories -->
    <string name="animations_title">Animations</string>
    <string name="interface_title">Interface</string>
    <string name="button_title">Buttons</string>
    <string name="gestures_title">Gestures</string>
    <string name="lockscreen_title">Lock Screen</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="navbar_title">Navigation Bar</string>
    <string name="powermenu_title">Power Menu</string>
    <string name="quicksettings_title">Quick Settings</string>
    <string name="recents_title">Recents Apps</string>
    <string name="statusbar_title">Status Bar</string>
    <string name="notifications_title">Notifications</string>

    <!-- QS rows and columns -->
    <string name="sysui_qqs_count_title">Columns (Quickbar)</string>
    <string name="qs_layout_category">Layout</string>
    <string name="qs_column_rows_settings_title">QS panel settings</string>
    <string name="qs_columns_rows_category_title">QS columns and rows</string>
    <string name="qs_rows_columns_title">QS rows and columns</string>
    <string name="qs_rows_portrait_title">Rows (Portrait)</string>
    <string name="qs_rows_landscape_title">Rows (Landscape)</string>
    <string name="qs_columns_portrait_title">Columns (Portrait)</string>
    <string name="qs_columns_landscape_title">Columns (Landscape)</string>

    <!-- Quick Settings on lockscreen-->
    <string name="ls_qs_disabled_title">Disable QS on lockscreen</string>
    <string name="ls_qs_disabled_summary">Disable expanding quick settings on secure lockscreen</string>

    <!-- Gaming mode -->
    <string name="gaming_title">Gaming mode</string>

    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>

    <string name="add_package_to_title">Add application</string>

    <string name="gaming_mode_enabled_title">Enable gaming mode</string>
    <string name="gaming_mode_disable_auto_brightness_title">Disable automatic brightness</string>
    <string name="gaming_mode_disable_auto_brightness_summary">Disable auto brightness when entering game mode</string>
    <string name="gaming_mode_notification_danmaku_title">Notification Danmaku</string>
    <string name="gaming_mode_notification_danmaku_summary">Display the notification content in the form of danmaku in the game</string>
    <string name="gaming_mode_quick_start_apps_title">Quick Start Apps</string>
    <string name="gaming_mode_quick_start_apps_summary">Choose the application that you want to launch with a floating ball</string>
    <string name="gaming_mode_menu_opacity_title">Menu opacity level</string>

    <string name="gaming_mode_use_menu_overlay_title">Show menu overlay</string>
    <string name="gaming_mode_use_menu_overlay_summary">Show menu overlay when game is running. If this option is disabled, some game mode features will be disabled, such as Danmaku notifications</string>

    <string name="gaming_mode_performance">Performance</string>
    <string name="gaming_mode_use_game_driver_title">Use game driver</string>
    <string name="gaming_mode_use_game_driver_summary">Use specific drivers for games</string>
    <string name="gaming_mode_change_performance_title">Performance tuning</string>
    <string name="gaming_mode_change_performance_summary">Adjust performance level when starting game</string>
    <string name="gaming_mode_performance_title">Performance level</string>

    <string name="gaming_mode_dnd">Do not distrub</string>
    <string name="gaming_mode_disable_notification_alert_title">Disable notification alert</string>
    <string name="gaming_mode_disable_notification_alert_summary">Do not allow floating notification and conversation bubbles other than incoming calls and alarms</string>
    <string name="gaming_mode_disable_ringtone_title">No ringing</string>
    <string name="gaming_mode_disable_ringtone_summary">Turn off the ringing of incoming calls and notifications in gaming mode</string>
    <string name="gaming_mode_auto_answer_call_title">Answering calls automatically</string>
    <string name="gaming_mode_auto_answer_call_summary">Answer calls automatically in the game and hands free when no headphones connected</string>

    <string name="gaming_mode_prevent_accidental_touch">prevent accidental touch</string>
    <string name="gaming_mode_disable_hw_keys_title">Disable hardware keys</string>
    <string name="gaming_mode_disable_gesture_title">Disable gestures</string>

    <string name="gaming_mode_apps">Game list</string>
    <string name="gaming_mode_dynamic_add_title">Dynamic mode</string>
    <string name="gaming_mode_dynamic_add_summary">Try detecting and adding gaming apps automatically</string>

    <string name="gaming_mode_show_danmaku_title">Show danmaku</string>
    <string name="gaming_mode_danmaku_dynamic_notification_filter_title">Dynamic filtering notification</string>
    <string name="gaming_mode_danmaku_dynamic_notification_filter_summary">Automatically filter notifications such as download progress</string>
    <string name="gaming_mode_danmaku_size_horizontal_title">Danmaku size (horizontal)</string>
    <string name="gaming_mode_danmaku_size_vertical_title">Danmaku size  (vertical)</string>
    <string name="gaming_mode_danmaku_speed_horizontal_title">Danmaku speed (horizontal)</string>
    <string name="gaming_mode_danmaku_speed_vertical_title">Danmaku speed (vertical)</string>
    <string name="gaming_mode_danmaku_blacklist">Blacklist</string>

    <!-- Clear All Button Options -->
    <string name="clear_all_button_category">Clear All Button</string>
    <string name="clear_all_button_gravity_title">Clear All Button Gravity</string>
    <string name="clear_all_button_gravity_pick">Select a gravity</string>

    <!-- Gravity Left Center Right -->
    <string name="gravity_lcr_left">Left</string>
    <string name="gravity_lcr_center">Center</string>
    <string name="gravity_lcr_right">Right</string>

    <!-- Notification Headers Options -->
    <string name="notification_headers_category">Notification Headers</string>
    <string name="separators_notification_header_title">Separators in header</string>
    <string name="separators_notification_header_summary">Add separators in notification headers</string>
    <string name="notification_header_gravity_title">Notification Header Text Gravity</string>

    <!-- Notification headers -->
    <string name="notification_headers_title">Notification Headers</string>
    <string name="notification_headers_summary">Show headers in the notification shade</string>

    <!-- Network Traffic -->
    <string name="trafficsettings_title">Traffic Indicator</string>
    <string name="trafficsettings_summary">Statusbar/Header traffic indicator settings</string>
    <string name="network_traffic_settings_title">Network traffic monitor</string>
    <string name="network_traffic_settings_summary">Display and customize current network traffic levels</string>
    <string name="network_traffic_location_title">Location</string>
    <string name="network_traffic_location_disable">Disabled</string>
    <string name="network_traffic_location_statusbar">Statusbar</string>
    <string name="network_traffic_location_quick_statusbar">Quick Statusbar</string>
    <string name="network_traffic_mode_title">Display mode</string>
    <string name="network_traffic_mode_up">Upload only</string>
    <string name="network_traffic_mode_down">Download only</string>
    <string name="network_traffic_mode_all">Upload and download</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when inactive</string>
    <string name="network_traffic_autohide_kilobits">Kb/s</string>
    <string name="network_traffic_autohide_kilobytes">KB/s</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="network_traffic_show_units">Show units</string>
    <string name="network_traffic_show_units_summary">Whether to show traffic measurement units</string>
    <string name="network_traffic_units_title">Traffic measurement units</string>
    <string name="network_traffic_units_bits">Bits per second (b/s)</string>
    <string name="network_traffic_units_kilobits">Kilobits per second (kb/s)</string>
    <string name="network_traffic_units_megabits">Megabits per second (Mb/s)</string>
    <string name="network_traffic_units_bytes">Bytes per second (B/s)</string>
    <string name="network_traffic_units_kilobytes">Kilobytes per second (kB/s)</string>
    <string name="network_traffic_units_megabytes">Megabytes per second (MB/s)</string>
    <string name="network_traffic_hidearrow">Hide arrows</string>
    <string name="network_traffic_hidearrow_summary">Hide the network traffic indicator arrows</string>
    <string name="network_traffic_refresh_interval_title">Refresh interval</string>
    <string name="network_traffic_refresh_interval_summary">Duration after which speed is remeasured</string>
    <string name="unit_seconds">seconds</string>


</resources>
