<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2022 Project Heavens

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/notifications_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:key="notification_headers"
        android:title="@string/notification_headers_category" >

        <com.heavens.support.preferences.SystemSettingSwitchPreference
            android:key="notification_headers"
            android:title="@string/notification_headers_title"
            android:summary="@string/notification_headers_summary"
            android:defaultValue="true" />

        <com.heavens.support.preferences.SystemSettingSwitchPreference
            android:key="separators_notification_header"
            android:title="@string/separators_notification_header_title"
            android:summary="@string/separators_notification_header_summary"
            android:defaultValue="false" />

        <com.heavens.support.preferences.SystemSettingListPreference
            android:key="notification_header_gravity"
            android:title="@string/notification_header_gravity_title"
            android:dialogTitle="@string/clear_all_button_gravity_pick"
            android:entries="@array/gravity_lcr_entries"
            android:entryValues="@array/gravity_lcr_values"
            android:summary="%s"
            android:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="clear_all_button"
        android:title="@string/clear_all_button_category" >

        <com.heavens.support.preferences.SystemSettingListPreference
            android:key="clear_all_button_gravity"
            android:title="@string/clear_all_button_gravity_title"
            android:dialogTitle="@string/clear_all_button_gravity_pick"
            android:entries="@array/gravity_lcr_entries"
            android:entryValues="@array/gravity_lcr_values"
            android:summary="%s"
            android:defaultValue="1" />

    </PreferenceCategory>

        <com.heavens.settings.preferences.SystemSettingSwitchPreference
            android:key="notification_guts_kill_app_button"
            android:title="@string/notification_guts_kill_app_button_title"
            android:summary="@string/notification_guts_kill_app_button_summary"
            android:defaultValue="false" />

</PreferenceScreen>
