<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2022 Project Heavens

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/heavens_settings_title" >

        <!-- Status Bar -->
        <Preference
            android:key="statusbar_category"
            android:title="@string/statusbar_title"
            android:fragment="com.heavens.settings.fragments.StatusBarSettings" 
            android:icon="@drawable/ic_settings_statusbar"/>

        <!-- Quick Settings panel -->
        <Preference
            android:key="quicksettings_category"
            android:title="@string/quicksettings_title"
            android:fragment="com.heavens.settings.fragments.QuickSettings"
            android:icon="@drawable/ic_settings_quicksettings"/>

        <!-- Buttons -->
        <Preference
            android:key="buttonsettings_category"
            android:title="@string/button_title"
            android:fragment="com.heavens.settings.fragments.ButtonSettings"
            android:icon="@drawable/ic_settings_buttons"/>

        <!-- Gestures -->
        <Preference
            android:key="gestures_category"
            android:title="@string/gestures_title"
            android:fragment="com.heavens.settings.fragments.GestureSettings"
            android:icon="@drawable/ic_settings_gesture"/>

        <!-- Lock Screen -->
        <Preference
            android:key="lockscreen_category"
            android:title="@string/lockscreen_title"
            android:fragment="com.heavens.settings.fragments.LockScreenSettings"
            android:icon="@drawable/ic_settings_lockscreens"/>

        <!-- Power Menu -->
        <Preference
            android:key="powermenu__category"
            android:title="@string/powermenu_title"
            android:fragment="com.heavens.settings.fragments.PowerMenuSettings"
	        settings:controller="com.android.settings.gestures.PowerMenuPreferenceController"
            android:icon="@drawable/ic_settings_powermenu"/>

        <!-- Notifications -->
        <Preference
            android:key="notifications_category"
            android:title="@string/notifications_title"
            android:fragment="com.heavens.settings.fragments.NotificationSettings"
            android:icon="@drawable/ic_settings_notification"/>

        <!-- About -->
        <Preference
            android:key="about_category"
            android:title="@string/about_title"
            android:fragment="com.streak.settings.fragments.AboutSettings"
            android:icon="@drawable/ic_settings_about"/>

	    <!-- Gaming mode -->
        <Preference
            android:key="gaming_category"
            android:title="@string/gaming_title" 
            android:fragment="com.heavens.settings.fragments.GamingModeSettings"
            android:icon="@drawable/ic_settings_gaming"/>

</PreferenceScreen>
